updates preview interface

--- a/src/i18n/locales/en/common.json
+++ b/src/i18n/locales/en/common.json
@@ -200,7 +200,9 @@
     "templateCopied": "Template copied to your wheels!",
     "copyFailed": "Failed to copy template",
     "loginToCopy": "Log in to use this template",
-    "processingTemplate": "Creating your wheel from template..."
+    "processingTemplate": "Creating your wheel from template...",
+    "showControls": "Show presentation controls",
+    "controls": "Controls"
   },
   "footer": {
     "tagline": "Make yearly planning simple, clear, and effective for the whole team"
