--- a/src/i18n/locales/en/common.json
+++ b/src/i18n/locales/en/common.json
@@ -242,5 +242,19 @@
     "changeDates": "Change dates for {{name}}",
     "editItem": "Edit {{name}}",
     "removeItem": "Remove {{name}}"
+  },
+  "selection": {
+    "enterMode": "Select multiple",
+    "exitMode": "Exit selection",
+    "enterModeTooltip": "Select multiple activities",
+    "exitModeTooltip": "Exit selection mode",
+    "selected": "{{count}} selected",
+    "selectedOne": "{{count}} selected",
+    "moveToRing": "Move to ring",
+    "changeActivityGroup": "Change activity group",
+    "deleteAll": "Delete all",
+    "clearSelection": "Clear selection",
+    "confirmDelete": "Are you sure you want to delete {{count}} activities?",
+    "confirmDeleteOne": "Are you sure you want to delete {{count}} activity?"
   }
 }
