adds embedd functionality to share wheel using web view in ie PowerPoint

--- a/src/i18n/locales/en/common.json
+++ b/src/i18n/locales/en/common.json
@@ -28,7 +28,8 @@
     "previous": "Previous",
     "done": "Done",
     "showAll": "Show all",
-    "hideAll": "Hide all"
+    "hideAll": "Hide all",
+    "linkCopied": "Link copied!"
   },
   "labels": {
     "name": "Name",
@@ -111,8 +112,21 @@
     "exportData": "Export data (Excel/Sheets)",
     "resetAll": "Reset all",
     "selectImageFormat": "Select image format",
+    "export": "Export & Share",
+    "exportAndShare": "Export & Share",
+    "sharingLinks": "Sharing Links",
+    "copyPreviewLink": "Copy preview link",
+    "previewLinkDesc": "For sharing with others",
+    "copyEmbedLink": "Copy embed link",
+    "embedLinkDesc": "For PowerPoint, Word, websites",
+    "imageExport": "Image Export",
     "pngTransparent": "PNG (Transparent)",
+    "pngTransparentDesc": "Best for presentations",
     "pngWhite": "PNG (White background)",
+    "pngWhiteDesc": "Good for printing",
+    "jpegDesc": "Smaller file size",
+    "svgDesc": "Scalable vector graphics",
+    "pdfDesc": "Print-ready document",
     "copyToClipboard": "Copy to clipboard",
     "downloadImage": "Download image",
     "versionHistory": "Show version history",
