--- a/src/i18n/locales/sv/common.json
+++ b/src/i18n/locales/sv/common.json
@@ -28,7 +28,8 @@
     "previous": "Föregående",
     "done": "Klart",
     "showAll": "Visa alla",
-    "hideAll": "Dölj alla"
+    "hideAll": "Dölj alla",
+    "linkCopied": "Länk kopierad!"
   },
   "labels": {
     "name": "Namn",
@@ -111,8 +112,21 @@
     "exportData": "Exportera data (Excel/Sheets)",
     "resetAll": "Återställ allt",
     "selectImageFormat": "Välj bildformat",
+    "export": "Exportera & Dela",
+    "exportAndShare": "Exportera & Dela",
+    "sharingLinks": "Delningslänkar",
+    "copyPreviewLink": "Kopiera förhandsgranskningslänk",
+    "previewLinkDesc": "För delning med andra",
+    "copyEmbedLink": "Kopiera inbäddningslänk",
+    "embedLinkDesc": "För PowerPoint, Word, webbsidor",
+    "imageExport": "Bildexport",
     "pngTransparent": "PNG (Transparent)",
+    "pngTransparentDesc": "Bäst för presentationer",
     "pngWhite": "PNG (Vit bakgrund)",
+    "pngWhiteDesc": "Bra för utskrift",
+    "jpegDesc": "Mindre filstorlek",
+    "svgDesc": "Skalbar vektorgrafik",
+    "pdfDesc": "Utskriftsklar fil",
     "copyToClipboard": "Kopiera till urklipp",
     "downloadImage": "Ladda ner bild",
     "versionHistory": "Visa versionshistorik",
