refactors to use dialog instead of native alert

--- a/src/i18n/locales/en/editor.json
+++ b/src/i18n/locales/en/editor.json
@@ -284,7 +284,10 @@
     "previewTooltip": "Preview",
     "restoreTooltip": "Restore this version",
     "deleteTooltip": "Delete version",
+    "restoreTitle": "Restore to version {{number}}?",
+    "restoreMessage": "This will replace the current version with this old version. A new version of the current state will be created first, so nothing is lost.",
     "restoreConfirm": "Restore to version {{number}}?\n\nThis will replace the current version with this old version. A new version of the current state will be created first, so nothing is lost.",
+    "deleteTitle": "Delete version?",
     "deleteConfirm": "Delete version {{number}}? This cannot be undone.",
     "restored": "Version {{number}} restored!",
     "deleted": "Version deleted",
