--- a/src/i18n/locales/sv/editor.json
+++ b/src/i18n/locales/sv/editor.json
@@ -284,7 +284,10 @@
     "previewTooltip": "Förhandsgranska",
     "restoreTooltip": "Återställ denna version",
     "deleteTooltip": "Radera version",
+    "restoreTitle": "Återställ till version {{number}}?",
+    "restoreMessage": "Detta kommer att ersätta den nuvarande versionen med denna gamla version. En ny version av det nuvarande tillståndet kommer att skapas först, så inget går förlorat.",
     "restoreConfirm": "Återställ till version {{number}}?\n\nDetta kommer att ersätta den nuvarande versionen med denna gamla version. En ny version av det nuvarande tillståndet kommer att skapas först, så inget går förlorat.",
+    "deleteTitle": "Radera version?",
     "deleteConfirm": "Radera version {{number}}? Detta går inte att ångra.",
     "restored": "Version {{number}} återställd!",
     "deleted": "Version raderad",
