adds wheel linking functionality - BETA

--- a/src/i18n/locales/en/editor.json
+++ b/src/i18n/locales/en/editor.json
@@ -121,6 +121,9 @@
     "end": "End",
     "time": "Time",
     "description": "Description",
+    "linkedWheel": "Linked Wheel",
+    "loadingLinkedWheel": "Loading...",
+    "linkedWheelNotFound": "Linked wheel not found",
     "dragToMove": "Drag to move",
     "edit": "Edit",
     "delete": "Delete",
@@ -161,6 +164,13 @@
     "ringLabel": "Ring",
     "activityLabel": "Activity",
     "labelLabel": "Label",
+    "linkToWheelTitle": "Link to Another Wheel (Optional)",
+    "selectWheelLabel": "Select Wheel",
+    "noLinkOption": "No link",
+    "loadingWheels": "Loading wheels...",
+    "linkHelpText": "Link this item to another wheel for reference or details",
+    "linkedTo": "Linked to",
+    "linkWillOpenInNewTab": "Clicking the link icon will open this wheel in a new tab",
     "startDateLabel": "Start Date",
     "startDateRequired": "Start date is required",
     "endDateLabel": "End Date",
@@ -179,6 +189,14 @@
     "ringLabel": "Ring",
     "activityLabel": "Activity",
     "labelLabel": "Label",
+    "linkToWheelTitle": "Link to Another Wheel (Optional)",
+    "selectWheelLabel": "Select Wheel",
+    "noLinkOption": "No link",
+    "removeLink": "Remove link",
+    "loadingWheels": "Loading wheels...",
+    "linkHelpText": "Link this item to another wheel for reference or details",
+    "linkedTo": "Linked to",
+    "linkWillOpenInNewTab": "Clicking the link icon will open this wheel in a new tab",
     "startDateLabel": "Start Date",
     "startDateRequired": "Start date is required",
     "endDateLabel": "End Date",
@@ -380,6 +398,14 @@
       "startCreating": "Start creating your year wheel"
     }
   },
+  "linkToWheelTitle": "Link to Another Wheel (Optional)",
+  "selectWheelLabel": "Select a wheel to link",
+  "loadingWheels": "Loading available wheels...",
+  "loadingLinkedWheel": "Loading wheel information...",
+  "linkedWheelYear": "Year",
+  "openWheelButton": "Open",
+  "removeLinkButton": "Remove link",
+  "linkedWheelNotFound": "Linked wheel not found or no longer accessible",
   "aiOnboarding": {
     "welcome": {
       "title": "Welcome to the AI Assistant!",
