--- a/src/i18n/locales/sv/editor.json
+++ b/src/i18n/locales/sv/editor.json
@@ -121,6 +121,9 @@
     "end": "Slut",
     "time": "Tid",
     "description": "Beskrivning",
+    "linkedWheel": "Länkat hjul",
+    "loadingLinkedWheel": "Laddar...",
+    "linkedWheelNotFound": "Länkat hjul hittades inte",
     "dragToMove": "Dra för att flytta",
     "edit": "Redigera",
     "delete": "Radera",
@@ -161,6 +164,13 @@
     "ringLabel": "Ring",
     "activityLabel": "Aktivitet",
     "labelLabel": "Etikett",
+    "linkToWheelTitle": "Länka till ett annat hjul (valfritt)",
+    "selectWheelLabel": "Välj hjul",
+    "noLinkOption": "Ingen länk",
+    "loadingWheels": "Laddar hjul...",
+    "linkHelpText": "Länka denna händelse till ett annat hjul för referens eller detaljer",
+    "linkedTo": "Länkat till",
+    "linkWillOpenInNewTab": "Att klicka på länkikonen öppnar detta hjul i en ny flik",
     "startDateLabel": "Startdatum",
     "startDateRequired": "Startdatum är obligatoriskt",
     "endDateLabel": "Slutdatum",
@@ -179,6 +189,14 @@
     "ringLabel": "Ring",
     "activityLabel": "Aktivitet",
     "labelLabel": "Etikett",
+    "linkToWheelTitle": "Länka till ett annat hjul (valfritt)",
+    "selectWheelLabel": "Välj hjul",
+    "noLinkOption": "Ingen länk",
+    "removeLink": "Ta bort länk",
+    "loadingWheels": "Laddar hjul...",
+    "linkHelpText": "Länka denna händelse till ett annat hjul för referens eller detaljer",
+    "linkedTo": "Länkat till",
+    "linkWillOpenInNewTab": "Att klicka på länkikonen öppnar detta hjul i en ny flik",
     "startDateLabel": "Startdatum",
     "startDateRequired": "Startdatum är obligatoriskt",
     "endDateLabel": "Slutdatum",
@@ -380,6 +398,14 @@
       "startCreating": "Börja skapa ditt årshjul"
     }
   },
+  "linkToWheelTitle": "Länka till annat hjul (valfritt)",
+  "selectWheelLabel": "Välj ett hjul att länka till",
+  "loadingWheels": "Laddar tillgängliga hjul...",
+  "loadingLinkedWheel": "Laddar hjulinformation...",
+  "linkedWheelYear": "År",
+  "openWheelButton": "Öppna",
+  "removeLinkButton": "Ta bort länk",
+  "linkedWheelNotFound": "Länkat hjul hittades inte eller är inte längre tillgängligt",
   "aiOnboarding": {
     "welcome": {
       "title": "Välkommen till AI-assistenten!",
