fixes missing translations, wheel rotation speed

--- a/src/i18n/locales/en/common.json
+++ b/src/i18n/locales/en/common.json
@@ -101,6 +101,15 @@
     "november": "November",
     "december": "December"
   },
+  "daysShort": {
+    "monday": "Mon",
+    "tuesday": "Tue",
+    "wednesday": "Wed",
+    "thursday": "Thu",
+    "friday": "Fri",
+    "saturday": "Sat",
+    "sunday": "Sun"
+  },
   "header": {
     "closePanel": "Close panel",
     "openPanel": "Open panel",
