cleans up item creation ui

--- a/src/i18n/locales/en/editor.json
+++ b/src/i18n/locales/en/editor.json
@@ -132,64 +132,40 @@
     "deleteButton": "Delete",
     "cancel": "Cancel"
   },
-  "editActivityModal": {
-    "title": "Edit activity",
-    "nameLabel": "Name",
-    "namePlaceholder": "e.g., Christmas campaign",
-    "nameRequired": "Name is required",
-    "ringLabel": "Ring",
-    "activityGroupLabel": "Activity group",
-    "labelLabel": "Label (optional)",
-    "labelNone": "None",
-    "startDateLabel": "Start date",
-    "startDateRequired": "Start date is required",
-    "endDateLabel": "End date",
-    "endDateRequired": "End date is required",
-    "endDateInvalid": "End date must be after start date",
-    "timeLabel": "Time (optional)",
-    "timePlaceholder": "e.g., 09:00 - 17:00",
-    "descriptionLabel": "Description (optional)",
-    "descriptionPlaceholder": "Add additional details about this activity...",
-    "deleteButton": "Delete",
-    "cancelButton": "Cancel",
-    "saveButton": "Save",
-    "deleteConfirmTitle": "Delete activity?",
-    "deleteConfirmMessage": "Are you sure you want to delete \"{name}\"? This action cannot be undone."
-  },
   "addItemModal": {
     "title": "Add New Item",
-    "itemNameLabel": "Item Name",
+    "itemNameLabel": "Item Name *",
     "itemNamePlaceholder": "e.g., Christmas campaign",
     "itemNameRequired": "Name is required",
-    "ringLabel": "Ring",
-    "activityLabel": "Activity",
+    "ringLabel": "Ring *",
+    "activityLabel": "Activity *",
     "labelLabel": "Label",
-    "linkToWheelTitle": "Link to Another Wheel (Optional)",
+    "linkToWheelTitle": "Link to Another Wheel",
     "selectWheelLabel": "Select Wheel",
     "noLinkOption": "No link",
     "loadingWheels": "Loading wheels...",
     "linkHelpText": "Link this item to another wheel for reference or details",
     "linkedTo": "Linked to",
     "linkWillOpenInNewTab": "Clicking the link icon will open this wheel in a new tab",
-    "startDateLabel": "Start Date",
+    "startDateLabel": "Start Date *",
     "startDateRequired": "Start date is required",
-    "endDateLabel": "End Date",
+    "endDateLabel": "End Date *",
     "endDateRequired": "End date is required",
     "endDateInvalid": "End date must be after start date",
-    "timeLabel": "Time (optional)",
+    "timeLabel": "Time",
     "timePlaceholder": "e.g., 09:00 - 17:00",
     "cancel": "Cancel",
     "addItem": "Add Item"
   },
   "editItemModal": {
     "title": "Edit Item",
-    "itemNameLabel": "Name",
+    "itemNameLabel": "Name *",
     "itemNamePlaceholder": "e.g., Christmas campaign",
     "itemNameRequired": "Name is required",
-    "ringLabel": "Ring",
-    "activityLabel": "Activity",
+    "ringLabel": "Ring *",
+    "activityLabel": "Activity *",
     "labelLabel": "Label",
-    "linkToWheelTitle": "Link to Another Wheel (Optional)",
+    "linkToWheelTitle": "Link to Another Wheel",
     "selectWheelLabel": "Select Wheel",
     "noLinkOption": "No link",
     "removeLink": "Remove link",
@@ -197,12 +173,12 @@
     "linkHelpText": "Link this item to another wheel for reference or details",
     "linkedTo": "Linked to",
     "linkWillOpenInNewTab": "Clicking the link icon will open this wheel in a new tab",
-    "startDateLabel": "Start Date",
+    "startDateLabel": "Start Date *",
     "startDateRequired": "Start date is required",
-    "endDateLabel": "End Date",
+    "endDateLabel": "End Date *",
     "endDateRequired": "End date is required",
     "endDateInvalid": "End date must be after start date",
-    "timeLabel": "Time (optional)",
+    "timeLabel": "Time",
     "timePlaceholder": "e.g., 09:00 - 17:00",
     "deleteButton": "Delete",
     "cancel": "Cancel",
@@ -398,7 +374,7 @@
       "startCreating": "Start creating your year wheel"
     }
   },
-  "linkToWheelTitle": "Link to Another Wheel (Optional)",
+  "linkToWheelTitle": "Link to Another Wheel",
   "selectWheelLabel": "Select a wheel to link",
   "loadingWheels": "Loading available wheels...",
   "loadingLinkedWheel": "Loading wheel information...",
