--- a/src/i18n/locales/sv/editor.json
+++ b/src/i18n/locales/sv/editor.json
@@ -132,64 +132,40 @@
     "deleteButton": "Radera",
     "cancel": "Avbryt"
   },
-  "editActivityModal": {
-    "title": "Redigera aktivitet",
-    "nameLabel": "Namn",
-    "namePlaceholder": "t.ex., Julkampanj",
-    "nameRequired": "Namn är obligatoriskt",
-    "ringLabel": "Ring",
-    "activityGroupLabel": "Aktivitetsgrupp",
-    "labelLabel": "Etikett (valfritt)",
-    "labelNone": "Ingen",
-    "startDateLabel": "Startdatum",
-    "startDateRequired": "Startdatum är obligatoriskt",
-    "endDateLabel": "Slutdatum",
-    "endDateRequired": "Slutdatum är obligatoriskt",
-    "endDateInvalid": "Slutdatum måste vara efter startdatum",
-    "timeLabel": "Tid (valfritt)",
-    "timePlaceholder": "t.ex., 09:00 - 17:00",
-    "descriptionLabel": "Beskrivning (frivilligt)",
-    "descriptionPlaceholder": "Lägg till ytterligare information om denna aktivitet...",
-    "deleteButton": "Radera",
-    "cancelButton": "Avbryt",
-    "saveButton": "Spara",
-    "deleteConfirmTitle": "Radera aktivitet?",
-    "deleteConfirmMessage": "Är du säker på att du vill radera \"{name}\"? Denna åtgärd kan inte ångras."
-  },
   "addItemModal": {
     "title": "Lägg till ny händelse",
-    "itemNameLabel": "Händelsens namn",
+    "itemNameLabel": "Händelsens namn *",
     "itemNamePlaceholder": "t.ex., Julkampanj",
     "itemNameRequired": "Namn är obligatoriskt",
-    "ringLabel": "Ring",
-    "activityLabel": "Aktivitet",
+    "ringLabel": "Ring *",
+    "activityLabel": "Aktivitet *",
     "labelLabel": "Etikett",
-    "linkToWheelTitle": "Länka till ett annat hjul (valfritt)",
+    "linkToWheelTitle": "Länka till ett annat hjul",
     "selectWheelLabel": "Välj hjul",
     "noLinkOption": "Ingen länk",
     "loadingWheels": "Laddar hjul...",
     "linkHelpText": "Länka denna händelse till ett annat hjul för referens eller detaljer",
     "linkedTo": "Länkat till",
     "linkWillOpenInNewTab": "Att klicka på länkikonen öppnar detta hjul i en ny flik",
-    "startDateLabel": "Startdatum",
+    "startDateLabel": "Startdatum *",
     "startDateRequired": "Startdatum är obligatoriskt",
-    "endDateLabel": "Slutdatum",
+    "endDateLabel": "Slutdatum *",
     "endDateRequired": "Slutdatum är obligatoriskt",
     "endDateInvalid": "Slutdatum måste vara efter startdatum",
-    "timeLabel": "Tid (valfritt)",
+    "timeLabel": "Tid",
     "timePlaceholder": "t.ex., 09:00 - 17:00",
     "cancel": "Avbryt",
     "addItem": "Lägg till händelse"
   },
   "editItemModal": {
     "title": "Redigera händelse",
-    "itemNameLabel": "Namn",
+    "itemNameLabel": "Namn *",
     "itemNamePlaceholder": "t.ex., Julkampanj",
     "itemNameRequired": "Namn är obligatoriskt",
-    "ringLabel": "Ring",
-    "activityLabel": "Aktivitet",
+    "ringLabel": "Ring *",
+    "activityLabel": "Aktivitet *",
     "labelLabel": "Etikett",
-    "linkToWheelTitle": "Länka till ett annat hjul (valfritt)",
+    "linkToWheelTitle": "Länka till ett annat hjul",
     "selectWheelLabel": "Välj hjul",
     "noLinkOption": "Ingen länk",
     "removeLink": "Ta bort länk",
@@ -197,12 +173,12 @@
     "linkHelpText": "Länka denna händelse till ett annat hjul för referens eller detaljer",
     "linkedTo": "Länkat till",
     "linkWillOpenInNewTab": "Att klicka på länkikonen öppnar detta hjul i en ny flik",
-    "startDateLabel": "Startdatum",
+    "startDateLabel": "Startdatum *",
     "startDateRequired": "Startdatum är obligatoriskt",
-    "endDateLabel": "Slutdatum",
+    "endDateLabel": "Slutdatum *",
     "endDateRequired": "Slutdatum är obligatoriskt",
     "endDateInvalid": "Slutdatum måste vara efter startdatum",
-    "timeLabel": "Tid (valfritt)",
+    "timeLabel": "Tid",
     "timePlaceholder": "t.ex., 09:00 - 17:00",
     "deleteButton": "Radera",
     "cancel": "Avbryt",
@@ -398,7 +374,7 @@
       "startCreating": "Börja skapa ditt årshjul"
     }
   },
-  "linkToWheelTitle": "Länka till annat hjul (valfritt)",
+  "linkToWheelTitle": "Länka till annat hjul",
   "selectWheelLabel": "Välj ett hjul att länka till",
   "loadingWheels": "Laddar tillgängliga hjul...",
   "loadingLinkedWheel": "Laddar hjulinformation...",
