--- a/src/i18n/locales/en/editor.json
+++ b/src/i18n/locales/en/editor.json
@@ -130,7 +130,9 @@
     "deleteTitle": "Delete activity",
     "deleteConfirm": "Are you sure you want to delete \"{{name}}\"? This action cannot be undone.",
     "deleteButton": "Delete",
-    "cancel": "Cancel"
+    "cancel": "Cancel",
+    "details": "Details",
+    "comments": "Comments"
   },
   "addItemModal": {
     "title": "Add New Item",
