disables google sheets export

--- a/src/i18n/locales/en/export.json
+++ b/src/i18n/locales/en/export.json
@@ -3,6 +3,7 @@
   "description": "Export year wheel activities to various formats",
   "loading": "Loading...",
   "selectFormat": "Select export format",
+  "comingSoon": "Coming Soon",
   "exportButton": "Export",
   "exporting": "Exporting...",
   "noData": "No activities to export",
