--- a/src/i18n/locales/sv/export.json
+++ b/src/i18n/locales/sv/export.json
@@ -3,6 +3,7 @@
   "description": "Exportera årshjulets aktiviteter till olika format",
   "loading": "Laddar...",
   "selectFormat": "Välj exportformat",
+  "comingSoon": "Kommer snart",
   "exportButton": "Exportera",
   "exporting": "Exporterar...",
   "noData": "Inga aktiviteter att exportera",
