--- a/src/i18n/locales/sv/common.json
+++ b/src/i18n/locales/sv/common.json
@@ -76,7 +76,8 @@
   },
   "errors": {
     "loadingError": "Problem med att ladda komponent",
-    "loadingErrorMessage": "Ett fel uppstod när en del av applikationen skulle laddas. Försök att ladda om sidan."
+    "loadingErrorMessage": "Ett fel uppstod när en del av applikationen skulle laddas. Försök att ladda om sidan.",
+    "persistentIssue": "Om det här problemet kvarstår, kontakta hey@communitaslabs.io"
   },
   "navigation": {
     "menu": "Meny",
