Major update - adds affiliate system

--- a/src/i18n/locales/sv/common.json
+++ b/src/i18n/locales/sv/common.json
@@ -59,7 +59,8 @@
     "selectTeam": "Välj team",
     "personal": "Personligt hjul",
     "teamWheelInfo": "Team-hjul kan ses av alla teammedlemmar",
-    "none": "Ingen"
+    "none": "Ingen",
+    "actions": "Åtgärder"
   },
   "messages": {
     "saved": "Sparad!",
