--- a/src/i18n/locales/en/common.json
+++ b/src/i18n/locales/en/common.json
@@ -59,7 +59,8 @@
     "selectTeam": "Select team",
     "personal": "Personal wheel",
     "teamWheelInfo": "Team wheels can be seen by all team members",
-    "none": "None"
+    "none": "None",
+    "actions": "Actions"
   },
   "messages": {
     "saved": "Saved!",
